# kvs

./: Cargo.toml  store.txt
src/: error.rs  lib.rs
tests/: tests.rs
