[package]
name = "kvs"
version = "0.1.0"
authors = ["yansq <felzyan33@gmail.com>"]
description = "A key-value store"
edition = "2021"

[lib]
test = false

[[bin]]
name = "kvs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.9"
walkdir = "2.4"
