[package]
name = "kvs"
version = "0.1.0"
authors = ["yansq <felzyan33@gmail.com>"]
description = "A key-value store"
edition = "2021"

[lib]
name = "kvs"
test = false

[[bin]]
name = "server"
src = "src/bin/server.rs"
test = false

[[bin]]
name = "client"
src = "src/bin/client.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.9"
walkdir = "2.4"
criterion = "0.5.1"
rand = "0.8.5"
